meego-im-framework (0.19.15~1) unstable; urgency=low

  * [UNRELEASED]
  * Fixes: NB#188429 - Application does not receive keyboard events if uiserver was restarted/started after application
  * new ut_mimapplication
  * new ut_mimsettingsdialog
  * Fixed unit test crashes
  * cleanup .pri/.pro under tests/

 -- Hannu Koivisto <hannu.koivisto@vincit.fi>  Fri, 27 Aug 2010 17:45:00 +0300

meego-im-framework (0.19.14-1) unstable; urgency=low

  * Fixes: NB#172960 - Input methods expose sensitive data on D-Bus
  * Changed plugin handler keys in gconf

 -- Pekka Vuorela <pekka.ta.vuorela@nokia.com>  Thu, 26 Aug 2010 15:33:46 +0300

meego-im-framework (0.19.13-1) unstable; urgency=low

  * Correct some pro files to enable code coverage.

 -- Kimmo Surakka <kimmo.surakka@nokia.com>  Wed, 25 Aug 2010 10:01:22 +0300

meego-im-framework (0.19.12-1) unstable; urgency=low

  * Fixes: NB#184715 - Device Freezes After Keyboard In Sym View Crashes
 
 -- huaming wang <huaming.wang@nokia.com>  Fri, 20 Aug 2010 15:26:52 +0300

meego-im-framework (0.19.11-1) unstable; urgency=low

  * Fixes: NB#183245 - 'Active input method' dialog never disappears.
  * Fixes: NB#184056 - "! Plugin not available" is displayed for text input

 -- Pekka Vuorela <pekka.ta.vuorela@nokia.com>  Tue, 17 Aug 2010 15:22:42 +0300

meego-im-framework (0.19.10-1) unstable; urgency=low

  * Fixes: NB#179290 - UIserver is shown as minimised window
  * Fixes: NB#180833 - Messaging-ui toolbar is not visible if meego-im-uiserver restarts / crashes

 -- huaming wang <huaming.wang@nokia.com>  Thu, 29 Jul 2010 12:45:50 +0300

meego-im-framework (0.19.9-1) unstable; urgency=low

  * Added support for plugin subviews

 -- Viacheslav Sobolev <ext-viacheslav.sobolev@nokia.com>  Thu, 15 Jul 2010 16:34:08 +0300

meego-im-framework (0.19.8-2) unstable; urgency=low

  * Explictly call disappearSceneWindowNow for settings dialog.

 -- Ning Chi <ext-chi.ning@nokia.com>  Sat, 03 Jul 2010 15:32:30 +0300
